--- a/src/views/layouts/layoutAdmin.ejs
+++ b/src/views/layouts/layoutAdmin.ejs
@@ -10,7 +10,8 @@
     <body>
         <%- include('../partials/admin/headerAdmin') %>
         <%- body %>
-        <&- include ('../partials/admin/footerAdmin') %>
+        <%- include ('../partials/admin/footerAdmin') %>
+        
         <script src="../js/script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
     </body>
