--- a/src/views/partials/tienda/headerTienda.ejs
+++ b/src/views/partials/tienda/headerTienda.ejs
@@ -1,6 +1,6 @@
 <header>
     <picture class="navbar__logo">
-        <a href="index.html">
+        <a href="/">
             <img class="img-logo" src="multimedia/branding/logo_light_horizontal.svg"
                 alt="Isologotipo de la Marca funkoshop">
         </a>
@@ -10,7 +10,7 @@
         <button id="cerrar" class="menu-cerrar"><iconify-icon icon="fa6-solid:bars"></iconify-icon></button>
         <ul class="navbar__menu">
             <li class="navbar__item with__submenu">
-                <a class="navbar__link with-icon" href="pages_tienda/shop.html">SHOP<iconify-icon
+                <a class="navbar__link with-icon" href="/shop">SHOP<iconify-icon
                         icon="ion:chevron-down"></iconify-icon></a>
                 <ul class="submenu">
                     <li class="submenu__item">
@@ -25,10 +25,10 @@
                 </ul>
             </li>
             <li class="navbar__item">
-                <a class="navbar__link" href="pages_admin/contacto.html">CONTACTO</a>
+                <a class="navbar__link" href="/contacto">CONTACTO</a>
             </li>
             <li class="navbar__item">
-                <a class="navbar__link" href="pages_admin/login.html">LOGIN</a>
+                <a class="navbar__link" href="/login">LOGIN</a>
             </li>
             <li class="nabvar__item">
                 <a class="navbar__cart" href="pages_tienda/carrito_compras.html">
