--- a/src/views/partials/tienda/headerTienda.ejs
+++ b/src/views/partials/tienda/headerTienda.ejs
@@ -31,7 +31,7 @@
                 <a class="navbar__link" href="/login">LOGIN</a>
             </li>
             <li class="nabvar__item">
-                <a class="navbar__cart" href="pages_tienda/carrito_compras.html">
+                <a class="navbar__cart" href="/carrito">
                     <img src="multimedia/icons/cart-icon.svg" alt="ícono de carrito">
                 </a>
             </li>
