--- a/src/views/partials/admin/footerAdmin.ejs
+++ b/src/views/partials/admin/footerAdmin.ejs
@@ -2,16 +2,16 @@
     <div class="navbar container">
         <ul>
             <li class="navbar__item">
-                <a class="navbar__link" href="../pages_tienda/shop.html">Ver Tienda</a>
+                <a class="navbar__link" href="/shop">Shop</a>
             </li>
             <li class="navbar__item">
-                <a class="navbar__link" href="register.html">Registrarse</a>
+                <a class="navbar__link" href="/register">Registrarse</a>
             </li>
             <li class="navbar__item">
-                <a class="navbar__link" href="login.html">Ingresar</a>
+                <a class="navbar__link" href="/login">Ingresar</a>
             </li>
             <li class="navbar__item">
-                <a class="navbar__link" href="contacto.html">Contacto</a>
+                <a class="navbar__link" href="/contacto">Contacto</a>
             </li>
         </ul>
         <picture class="footer__logo">
