--- a/src/views/partials/admin/headerAdmin.ejs
+++ b/src/views/partials/admin/headerAdmin.ejs
@@ -1,7 +1,7 @@
 <header>
 
     <picture class="navbar__logo">
-        <a href="../index.html">
+        <a href="/">
             <img class="img-logo" src="../multimedia/branding/logo_light_horizontal.svg"
                 alt="Isologotipo de la Marca funkoshop">
         </a>
@@ -11,13 +11,13 @@
         <button id="cerrar" class="menu-cerrar"><iconify-icon icon="fa6-solid:bars"></iconify-icon></button>
         <ul class="navbar__menu">
             <li class="navbar__item">
-                <a class="navbar__link with-icon" href="../pages_tienda/shop.html">Ver Tienda</a>
+                <a class="navbar__link with-icon" href="/shop">Ver Tienda</a>
             </li>
             <li class="navbar__item">
-                <a class="navbar__link" href="contacto.html">CONTACTO</a>
+                <a class="navbar__link" href="/admin">Admin</a>
             </li>
             <li class="navbar__item">
-                <a class="navbar__link" href="login.html">LOGIN</a>
+                <a class="navbar__link" href="/login">Salir</a>
             </li>
         </ul>
     </nav>
