--- a/src/views/partials/tienda/footerTienda.ejs
+++ b/src/views/partials/tienda/footerTienda.ejs
@@ -2,13 +2,13 @@
     <div class="navbar container">
         <ul>
             <li class="navbar__item">
-                <a class="navbar__link" href="pages_tienda/shop.html">Shop</a>
+                <a class="navbar__link" href="/shop">Shop</a>
             </li>
             <li class="navbar__item">
-                <a class="navbar__link" href="pages_admin/login.html">Ingresar</a>
+                <a class="navbar__link" href="/login">Ingresar</a>
             </li>
             <li class="navbar__item">
-                <a class="navbar__link" href="pages_admin/contacto.html">Contacto</a>
+                <a class="navbar__link" href="/contacto">Contacto</a>
             </li>
         </ul>
         <picture class="footer__logo">
