--- a/src/views/viewsTienda/shop.ejs
+++ b/src/views/viewsTienda/shop.ejs
@@ -46,13 +46,15 @@
 <section class= "main__cards">
 <!--starwars-->   
        <article class="card-1" >
-           <picture class="card-item__img">
-               <span class="card-item__tag">NUEVO</span>
-               <img class="card-item__img--front" src="../multimedia/star-wars/trooper-1.webp"
-                   alt="Figura coleccionable de Funko Stormtrooper">
-               <img class="card-item__img--back" src="../multimedia/star-wars/trooper-box.webp"
-                   alt="Figura coleccionable de Funko Stormtrooper Box">
-           </picture>
+           <a href="/items">
+            <picture class="card-item__img">
+            <span class="card-item__tag">NUEVO</span>
+            <img class="card-item__img--front" src="../multimedia/star-wars/trooper-1.webp"
+                alt="Figura coleccionable de Funko Stormtrooper">
+            <img class="card-item__img--back" src="../multimedia/star-wars/trooper-box.webp"
+                alt="Figura coleccionable de Funko Stormtrooper Box">
+        </picture>
+    </a>
        <h6 class="card-item__licence"   > STAR WARS</h6>
        <h3 class="card-item__name" >STORMTROOPER LIGHTSABER</h3>
        <p class="card-item__price" >$ 1.799,99</p>
