--- a/src/views/viewsAdmin/create.ejs
+++ b/src/views/viewsAdmin/create.ejs
@@ -1,63 +1,70 @@
 <main class="container">
     <section class="form__create">
-        
-        <form class="" action="" method="post">
+        <% if (typeof errors != 'undefined') { %>
+            <ul>
+              <% errors.forEach(error => { %>
+              <li><%= error.msg %></li>
+              <% }) %>
+            </ul>
+            <% } %>
+
+        <form action="/admin/create" method="post"  enctype="multipart/form-data">
             <h1 class="admin__title oneline">CREAR NUEVO ITEM</h1>
 
             <div class="select__categoria">
                 <label class="label__select" for="categoria">Categoría:</label>
-                <select class="select__item" name="categoria" id="categoria">
+                <select class="select__item" name="categoria" id="categoria" required>
                     <option id="option" class="select__option" value="">Seleccionar</option>
-                    <option id="option" class="select__option" value="">Star Wars</option>
-                    <option id="option" class="select__option" value="">Pokemon</option>
-                    <option id="option" class="select__option" value="">Harry Potter</option>
+                    <option id="option" class="select__option" value="<%= typeof values != 'undefined' ? values.categoria : '' %>">Star Wars</option>
+                    <option id="option" class="select__option" value="<%= typeof values != 'undefined' ? values.categoria : '' %>">Pokemon</option>
+                    <option id="option" class="select__option" value="<%= typeof values != 'undefined' ? values.categoria : '' %>">Harry Potter</option>
                 </select>
             </div>
             <div class="select__licencia">
                 <label class="label__select" for="licencia">Licencia:</label>
-                <select class="select__item" name="licencia" id="licencia">
+                <select class="select__item" name="licencia" id="licencia" required>
                     <option id="option" class="select__option" value="">Seleccionar</option>
-                    <option id="option" class="select__option" value="">Star Wars</option>
-                    <option id="option" class="select__option" value="">Pokemon</option>
-                    <option id="option" class="select__option" value="">Harry Potter</option>
+                    <option id="option" class="select__option" value="<%= typeof values != 'undefined' ? values.licencia : '' %>">Star Wars</option>
+                    <option id="option" class="select__option" value="<%= typeof values != 'undefined' ? values.licencia : '' %>">Pokemon</option>
+                    <option id="option" class="select__option" value="<%= typeof values != 'undefined' ? values.licencia : '' %>">Harry Potter</option>
                 </select>
             </div>
             <div class="nom__producto oneline">
-                <label class="label__input" for="nombre del producto">Nombre del Producto:</label>
-                <input class="input__item " type="text" placeholder="Kakashi Hatake Shippuden Saga">
+                <label class="label__input" for="nombre">Nombre del Producto:</label>
+                <input class="input__item " type="text" id="nombre"  placeholder="Kakashi Hatake Shippuden Saga" value="<%= typeof values != 'undefined' ? values.nombre : '' %>" required>
             </div>
             <div class="descripcion oneline">
-                <textarea class="textarea__descripcion" name="" id="" cols="30" rows="10"
+                <textarea class="textarea__descripcion" name="descripcion" id="descripcion" value="<%= typeof values != 'undefined' ? values.descripcion : '' %>" cols="30" rows="10"
                     placeholder="Descripción del producto"></textarea>
             </div>
 
             <div class="sku__item">
                 <label class="label__input" for="sku">SKU:</label>
-                <input class="input__item input__sku" type="text" placeholder="SSK111AB001">
+                <input class="input__item input__sku" type="text" name="sku" id="sku" value="<%= typeof values != 'undefined' ? values.sku : '' %>" placeholder="SSK111AB001" required>
             </div>
             <div class="precio__item">
                 <label class="label__input " for="precio">Precio:</label>
-                <input class="input__item input__precio" type="text" placeholder="$0.000,00">
+                <input class="input__item input__precio" type="text" name="precio" id="precio" value="<%= typeof values != 'undefined' ? values.precio : '' %>" placeholder="$0.000,00" required>
             </div>
             <div class="stock__item">
                 <label class="label__input input__stock" for="stock">Stock:</label>
-                <input class="input__item" type="text" placeholder="0">
+                <input class="input__item" type="text" name="stock" id="stock" value="<%= typeof values != 'undefined' ? values.stock : '' %>" placeholder="0">
             </div>
             <div class="descuento__item">
                 <label class="label__input" for="descuento">Descuento:</label>
-                <input class="input__item" type="text" placeholder="0%">
+                <input class="input__item" type="text" name="descuento" id="descuento" value="<%= typeof values != 'undefined' ? values.descuento : '' %>" placeholder="0%">
             </div>
             <div class="cuota__item">
                 <label class="label__input" for="cuotas">Cuotas:</label>
                 <select class="select__item__cuota" name="cuotas" id="cuotas">
-                    <option class="select__option" value="3 cuotas sin intereses">3 cuotas sin intereses</option>
-                    <option class="select__option" value="6 cuotas sin intereses">6 cuotas sin intereses</option>
-                    <option class="select__option" value="12 cuotas sin intereses">12 cuotas sin intereses</option>
+                    <option class="select__option" value="">3 cuotas sin intereses</option>
+                    <option class="select__option" value="">6 cuotas sin intereses</option>
+                    <option class="select__option" value="">12 cuotas sin intereses</option>
                 </select>
             </div>
             <div class="img__item oneline">
                 <label class="label__input" for="imagenes">Imágenes:</label>
-                <input class="input__item__file" type="file">  
+                <input class="input__item__file" type="file" name="imagenes">  
             </div> 
             <div class="btn__create oneline">
                 <button class="btn" type="submit">Agregar Producto</button>
