Se agregan funcionamiento de create y parte de edit

--- a/src/views/layouts/layoutAdmin.ejs
+++ b/src/views/layouts/layoutAdmin.ejs
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Admin</title>
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="/css/style.css">
     </head>
     
     <body>
@@ -12,7 +12,7 @@
         <%- body %>
         <%- include ('../partials/admin/footerAdmin') %>
         
-        <script src="../js/script.js"></script>
+        <script src="/js/script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
     </body>
 </html>
