--- a/src/views/viewsAdmin/edit.ejs
+++ b/src/views/viewsAdmin/edit.ejs
@@ -24,39 +24,39 @@
             </div>
             <div class="nom__producto nom__producto-edit oneline">
                 <label class="label__input" for="nombre del producto">Nombre del Producto:</label>
-                <input class="input__item" type="text" placeholder="Kakashi Hatake shippuden Saga">
+                <input class="input__item" type="text" placeholder="Kakashi Hatake shippuden Saga" value="<%= typeof values != 'undefined' ? values.product_name : '' %>">
             </div>
             <div class="descripcion oneline">
                 <textarea class="textarea__descripcion" name="" id="" cols="30" rows="10"
-                    placeholder="Figura Funko coleccionable de Kakashi Hatake de la saga Naruto Shipudden invocando chidori."></textarea>
+                    placeholder="Figura Funko coleccionable de Kakashi Hatake de la saga Naruto Shipudden invocando chidori."><%= typeof values != 'undefined' ? values.product_description : '' %></textarea>
             </div>
 
             <div class="sku__item sku__item-edit">
                 <label class="label__input" for="sku">SKU:</label>
-                <input class="input__item input__sku" type="text" placeholder="NARO01012">
+                <input class="input__item input__sku" type="text" placeholder="NARO01012" value="<%= typeof values != 'undefined' ? values.sku : '' %>">
             </div>
 
             <div class="precio__item precio__item-edit">
                 <label class="label__input" for="precio">Precio:</label>
-                <input class="input__item input__precio" type="text" placeholder="$1.799,00">
+                <input class="input__item input__precio" type="text" placeholder="$1.799,00" value="<%= typeof values != 'undefined' ? values.price : '' %>">
             </div>
 
             <div class="stock__item stock__item-edit">
                 <label class="label__input" for="stock">Stock:</label>
-                <input class="input__item input__stock" type="text" placeholder="10">
+                <input class="input__item input__stock" type="text" placeholder="10" value="<%= typeof values != 'undefined' ? values.stock : '' %>">
             </div>
 
             <div class="descuento__item desc__item-edit">
                 <label class="label__input" for="descuento">Descuento:</label>
-                <input class="input__item" type="text" placeholder="10%">
+                <input class="input__item" type="text" placeholder="10%" value="<%= typeof values != 'undefined' ? values.discount : '' %>">
             </div>
 
             <div class="cuota__item cuota__item-edit">
                 <label class="label__input" for="cuotas">Cuotas:</label>
                 <select class="select__item__cuota" name="cuotas" id="cuotas">
 
-                    <option class="select__option" value="6 cuotas sin intereses">6 cuotas sin intereses</option>
-                    <option class="select__option" value="12 cuotas sin intereses">12 cuotas sin intereses</option>
+                    <option class="select__option" value="">6 cuotas sin intereses</option>
+                    <option class="select__option" value="">12 cuotas sin intereses</option>
                 </select>
             </div>
 
