--- a/src/views/viewsTienda/shop.ejs
+++ b/src/views/viewsTienda/shop.ejs
@@ -1,5 +1,6 @@
 <aside class="filter__item">
-    <form action="" method="post">
+    <form  action="" method="post">
+        <div class="filtro">
         <div class="filter__search">
             <h3 class="filter__title">BUSCAR</h3>
             <input class="input__search" type="text" name="busqueda" id="busqueda" placeholder="Item o categoría" />
@@ -11,13 +12,21 @@
                 <option class="select__order-menor" value="menor"> Menor a mayor</option>
             </select>
         </div>
+    </div>
         <div class="filter__price">
             <h3 class="filter__title">PRECIO</h3>
+        <div class="precio">
+            <div>
             <label class="label__filter-price" for="min">MIN</label>
             <input class="input__price" type="number" name="min" id="min" placeholder="0" />
+            </div>
+            <div>
             <label class="label__filter-price" for="max">MAX</label>
             <input class="input__price" type="number" name="max" id="max" placeholder="0" />
         </div>
+            </div>
+        </div>
+    
         <div class="filter__check">
             <h3 class="filter__title">FILTRAR</h3>
             <div class="filter__check-item">
@@ -46,15 +55,13 @@
 <section class= "main__cards">
 <!--starwars-->   
        <article class="card-1" >
-           <a href="/items">
-            <picture class="card-item__img">
-            <span class="card-item__tag">NUEVO</span>
-            <img class="card-item__img--front" src="../multimedia/star-wars/trooper-1.webp"
-                alt="Figura coleccionable de Funko Stormtrooper">
-            <img class="card-item__img--back" src="../multimedia/star-wars/trooper-box.webp"
-                alt="Figura coleccionable de Funko Stormtrooper Box">
-        </picture>
-    </a>
+           <picture class="card-item__img">
+               <span class="card-item__tag">NUEVO</span>
+               <img class="card-item__img--front" src="../multimedia/star-wars/trooper-1.webp"
+                   alt="Figura coleccionable de Funko Stormtrooper">
+               <img class="card-item__img--back" src="../multimedia/star-wars/trooper-box.webp"
+                   alt="Figura coleccionable de Funko Stormtrooper Box">
+           </picture>
        <h6 class="card-item__licence"   > STAR WARS</h6>
        <h3 class="card-item__name" >STORMTROOPER LIGHTSABER</h3>
        <p class="card-item__price" >$ 1.799,99</p>
