--- a/src/views/partials/admin/headerAdmin.ejs
+++ b/src/views/partials/admin/headerAdmin.ejs
@@ -2,7 +2,7 @@
 
     <picture class="navbar__logo">
         <a href="/">
-            <img class="img-logo" src="../multimedia/branding/logo_light_horizontal.svg"
+            <img class="img-logo" src="/multimedia/branding/logo_light_horizontal.svg"
                 alt="Isologotipo de la Marca funkoshop">
         </a>
     </picture>
