--- a/src/views/viewsAdmin/create.ejs
+++ b/src/views/viewsAdmin/create.ejs
@@ -52,15 +52,15 @@
                 <input class="input__item" type="text" name="discount" id="descuento"  placeholder="0%">
             </div>
             <div class="cuota__item">
-                <label class="label__input" for="cuotas">Cuotas:</label>
-                <select class="select__item__cuota" name="dues" id="cuotas">
+                <label class="label__input" for="dues">Cuotas:</label>
+                <select class="select__item__cuota" name="dues" id="dues">
                     <option class="select__option" value="">3</option>
                     <option class="select__option" value="">6</option>
                     <option class="select__option" value="">12</option>
                 </select>
             </div>
             <div class="img__item oneline">
-                <label class="label__input" for="imagenes">Imágenes:</label>
+                <label class="label__input" for="imagen">Imágenes:</label>
                 <input class="input__item__file" type="file" name="imagen">  
             </div> 
             <div class="btn__create oneline">
