correccion de los name de login y register

--- a/src/views/viewsAdmin/login.ejs
+++ b/src/views/viewsAdmin/login.ejs
@@ -5,7 +5,7 @@
             <h1 class="login__title">INGRESAR A MI CUENTA</h1>
 
                 <label class="label__input-login" for="email">Email:</label>
-                <input class="input__item input__login" type="email" name="email" id="" placeholder="cuenta@correo.com" required>
+                <input class="input__item input__login" type="email" name="email"  placeholder="cuenta@correo.com" required>
 
                 <label class="label__input-login" for="password">Contraseña:</label>
                 <input class="input__item input__login " type="password" name="password" id="" placeholder="***********" required>
