--- a/src/views/viewsAdmin/register.ejs
+++ b/src/views/viewsAdmin/register.ejs
@@ -6,20 +6,20 @@
         <form action="" method="post">
 
             <label class="label__input label__register" for="name">Nombre:</label>
-            <input class="input__item input__register" type="text" name="nombre" placeholder="Nombre" required>
+            <input class="input__item input__register" type="text" name="name" placeholder="Nombre" required>
 
-            <label class="label__input label__register" for="apellido">Apellido:</label>
-            <input class="input__item input__register" type="text" name="apellido" placeholder="Apellido" required>
+            <label class="label__input label__register" for="lasname">Apellido:</label>
+            <input class="input__item input__register" type="text" name="lastname" placeholder="Apellido" required>
 
             <label class="label__input label__register" for="email">Email:</label>
-            <input class="input__item input__register" type="email" name="email" id="" placeholder="Email" required>
+            <input class="input__item input__register" type="email" name="email"  placeholder="Email" required>
 
             <label class="label__input label__register" for="password">Contraseña:</label>
-            <input class="input__item input__register" type="password" name="password" id=""
+            <input class="input__item input__register" type="password" name="password"
                 placeholder="************" required>
 
             <label class="label__input label__register" for="password">Repita Contraseña:</label>
-            <input class="input__item input__register" type="password" name="password" id=""
+            <input class="input__item input__register" type="password" name="password"
                 placeholder="************" required>
 
             <div class="register__btn">
