nuevo shop html, css, style, responsive

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -827,140 +827,120 @@ input[type="file"] {
 /*-------------------------------------------------------------------------------------*/
 
 /*ESTILOS SHOP*/
-/*ASIDE*/
-/* header {
-   grid-area: header;
-} */
 
-aside {
-   grid-area: aside;
-}
-
-main {
-   grid-area: main;
-}
-
-/* footer {
-   grid-area: footer;
-} */
-
-.main-containershop {
+.main__cards{
    display: grid;
-   grid-template-columns: 300px 2fr;
-   grid-template-rows: 1fr;
-   grid-template-areas:
-      "aside main"
-      
+   grid-template-columns: 19% repeat(3, 27%);
+   grid-template-rows: repeat(3,1fr) 70px;
+padding: var(--spacing-68)    var(--spacing-128); 
 }
 
-.filter__item {
-   display: flex;
+
+.filter__item{
+   width: 240px;
+   grid-column: 1/2;
+   grid-row: 1; 
+   padding: 15px;
 }
 
-.filter__item form>* {
-   padding: var(--spacing-12);
+.carta__uno{
+   grid-column: 2/3;
+   grid-row: 1; 
+   padding: 15px; 
 }
 
-.filter__title {
+.carta__dos{
+   grid-column: 3/4;
+   grid-row: 1;
+   padding: 15px;
+}
+
+.carta__tres{
+   grid-column:4/5;
+   grid-row:1;
+   padding: 15px;
+}
+.carta__cuatro{
+   grid-column: 2/3;
+   grid-row: 2;
+   padding: 15px;
+}
+.carta__cinco{
+   grid-column: 3/4;
+   grid-row:2 ;
+   padding: 15px;
+}
+.carta__seis{
+   grid-column:4/5;
+   grid-row: 2;
+   padding: 15px;
+}
+.carta__siete{
+   grid-column:2/3;
+   grid-row: 3;
+   padding: 15px;
+}
+
+.carta__ocho{
+   grid-column: 3/4;
+   grid-row: 3;
+   padding: 15px;
+}
+.carta__nueve{
+   grid-column: 4/5;
+   grid-row: 3;
+   padding: 15px;
+} 
+
+.filter__title{
+font-family: var(--font-base);
+font-size: var(--font-large);
+font-weight: 500;
+}
+
+.label__filter-check{
+   font-family: var(--font-base);
    font-size: var(--font-medium);
    font-weight: 500;
-   padding: var(--spacing-12) 0;
 }
 
-
-.filter__check {
-   display: inline-block;
-   flex-direction: column;
-}
-
-.input__search,
-.select__order {
-   padding: .5em;
+.input__search{
+   border: solid;
+   border-color: #747474;
    border-radius: 0.5em;
-   width: 100%;
-}
-
-.input__price {
-   width: 4em;
-   padding: 0.2em;
-   border-radius: 5px;
-   margin-left: var(--spacing-8);
-}
-
-.label__filter-price {
-   font-size: var(--font-small);
-}
-
-.label__filter-check {
-   font-size: var(--font-medium);
-   margin-left: 0.3em;
-}
-
-.filter__check-item {
-   padding: 0.3em 0;
-}
-
-
-input[type=checkbox] {
-   transform: scale(1.5);
-}
-
-/*MAIN*/
-
-.main__cards {
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: space-between;
-}
-
-.card-1,
-.card-2,
-.card-3,
-.card-4,
-.card-5,
-.card-6,
-.card-7,
-.card-8,
-.card-9 {
-   flex: 0 1 calc(33.33% - 20px);
-   margin-bottom: 20px;
-}
-
-article {
-   display: flex;
-   flex-direction: column;
-   gap: var(--spacing-12);
-   padding: var(--spacing-16);
-}
-
-.sidebar {
-   flex: 0 1 25%;
-   order: -1;
-}
-
-.main__cards {
-   display: flex;
-   flex-wrap: wrap;
-   flex: 1;
-
-}
-
-.main-containershop {
+   height: 33px;
    width: 90%;
-   margin-top: 35px;
 }
+ .select__order{
+   border: solid;
+   border-color: #747474;
+   border-radius: 0.5em;
+   height: 33px;
+   width: 90%;
+ }
 
-.pagination {
+ .input__price{
+   border: solid;
+   border-color: #747474;
+   border-radius: 0.5em;
+ }
+
+#pagination{
+   font-size: var(--font-xsmall);
+   font-weight: 700;
+   justify-content: center;
+   align-items: center;
+   grid-column: 3/4;
+   grid-row: 4;
    text-align: center;
    margin-top: 60px;
    margin-bottom: 60px;
    list-style: none;
-}
-
-.pagination li {
    display: inline;
    margin: 0 15px;
 }
+
+
 
 /*-------------------------------------------------------------------------------------*/
 
@@ -1442,13 +1422,28 @@ input[type=number] {
 
    /* RESPONSIVE SHOP */
 
-   .filter__item {
-      padding-left: var(--spacing-68);
+   .main__cards{
+      display: grid;
+      grid-template-columns: 22% repeat(3, 26%);
+      padding: var(--spacing-48)    var(--spacing-48);
+   }
+   
+   .filter__title{
+   font-size: var(--font-small);
+   }
+   
+   .label__filter-check{
+      font-size: var(--font-xsmall);
+   }
+   
+   .input__search{
+      width: 70%;
    }
 
-
-
-
+    .select__order{
+     width: 70%;
+    }
+   
 }
 
 /*----------------------------------------------------------------------------------*/
@@ -1915,106 +1910,76 @@ input[type=number] {
       font-size: var(--font-xlarge);
    }
 
-   /* RESPONSIVE SHOP */
+   
+/* RESPONSIVE SHOP */
 
-   .main-containershop {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 200px 1fr;
-      grid-template-areas:
-         
-         "aside aside "
-         "main main"
-         
+.main__cards{
+   display: grid;
+   grid-template-columns: 50% 50%  ;
+   grid-template-rows: repeat(5 , 18.5%) 5%;
+   padding: 0 var(--spacing-128);
+}
 
-   }
+.filtros {
+   display: none;
+}
 
-   .main__cards {
-      justify-content: center;
-      /* margin: auto; */
-      margin-left: 70px;
-   }
+.carta__uno{
+   padding: 15px;
+   grid-column:1 /2;
+   grid-row: 1;  
+}
 
-   .card-1 {
-      padding: 15px;
-      grid-column: 1/2;
-      grid-row: 2;
+.carta__dos{
+   padding: 15px;
+   grid-column: 2/3;
+   grid-row: 1;
+}
 
-   }
+.carta__tres{
+   padding: 15px;
+   grid-column: 1/2;
+   grid-row: 2;
+}
+.carta__cuatro{
+   padding: 15px;
+   grid-column: 2/3;
+   grid-row: 2;
+}
+.carta__cinco{
+   padding: 15px;
+   grid-column: 1/2;
+   grid-row:3;
+}
+.carta__seis{
+   padding: 15px;
+   grid-column: 2/3;
+   grid-row: 3;
+}
+.carta__siete{
+   padding: 15px;
+   grid-column: 1/2;
+   grid-row: 4;
+ 
+}
+.carta__ocho{
+   padding: 15px;
+   grid-column: 2/3;
+   grid-row: 4;
+}
+.carta__nueve{
+   padding: 15px;
+   grid-column: 1/2;
+   grid-row: 5;
+} 
 
-   .card-2 {
-      padding: 15px;
-      grid-column: 2/3;
-      grid-row: 2;
-   }
 
-   .card-3 {
-      padding: 15px;
-      grid-column: 1/2;
-      grid-row: 3;
-   }
+#pagination{
+   padding: 1em;
+   grid-column: 1/3;
+   grid-row: 6;
+}
 
-   .card-4 {
-      padding: 15px;
-      grid-column: 2/3;
-      grid-row: 3;
-   }
-
-   .card-5 {
-      padding: 15px;
-      grid-column: 1/2;
-      grid-row: 4;
-   }
-
-   .card-6 {
-      padding: 15px;
-      grid-column: 2/3;
-      grid-row: 4;
-   }
-
-   .card-7 {
-      padding: 15px;
-      grid-column: 1/2;
-      grid-row: 5;
-
-   }
-
-   .card-8 {
-      padding: 15px;
-      grid-column: 2/3;
-      grid-row: 5;
-   }
-
-   .card-9 {
-      padding: 15px;
-      grid-column: 1/2;
-      grid-row: 6;
-   }
-
-   .filter__item form {
-      display: flex;
-      margin: auto;
-   }
-
-   .filtro,
-   .precio {
-      display: flex;
-      flex-direction: column;
-   }
-
-   .label__filter-check {
-      font-size: var(--font-small);
-      margin-left: 0.3em;
-   }
-
-   .precio>* {
-      padding: var(--spacing-8) 0;
-   }
-
-   .filter__item div {
-      margin: 0 var(--spacing-20);
-
-   }
 
 
 }
@@ -2686,124 +2651,26 @@ input[type=number] {
       padding: 3px;
    }
 
+/* RESPONSIVE SHOP */
 
-   /* RESPONSIVE SHOP */
+.main__cards{
+   display: flex;
+   flex-direction: column;
+    padding: 0 var(--spacing-128);
+ }
+ 
+ .filtros {
+    display: none;
+ }
+   
+ #pagination{
+    padding: 1em;
+    grid-column: 1/3;
+    grid-row: 6;
+    
+ }
 
-   .grid-container {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 120px 20px 1fr 250px;
-      grid-template-areas:
-         "header header header"
-         "aside aside aside"
-         "main main main"
-         "footer footer footer";
-
-   }
-
-   .main__cards {
-      justify-content: center;
-      margin-left: 70px;
-   }
-
-   .card-1 {
-      padding: 15px;
-      grid-column: 1/2;
-      grid-row: 2;
-   }
-
-   .card-2 {
-      padding: 15px;
-      grid-column: 2/3;
-      grid-row: 2;
-   }
-
-   .card-3 {
-      padding: 15px;
-      grid-column: 1/2;
-      grid-row: 3;
-   }
-
-   .card-4 {
-      padding: 15px;
-      grid-column: 2/3;
-      grid-row: 3;
-   }
-
-   .card-5 {
-      padding: 15px;
-      grid-column: 1/2;
-      grid-row: 4;
-   }
-
-   .card-6 {
-      padding: 15px;
-      grid-column: 2/3;
-      grid-row: 4;
-   }
-
-   .card-7 {
-      padding: 15px;
-      grid-column: 1/2;
-      grid-row: 5;
-
-   }
-
-   .card-8 {
-      padding: 15px;
-      grid-column: 2/3;
-      grid-row: 5;
-   }
-
-   .card-9 {
-      padding: 15px;
-      grid-column: 1/2;
-      grid-row: 6;
-   }
-
-   .filter__item form {
-      display: none;
-   }
-
-   .filtro,
-   .precio {
-      display: flex;
-      flex-direction: column;
-   }
-
-
-   .filter__check {
-      display: grid;
-   }
-
-   .label__filter-check {
-      font-size: 10px;
-      margin-left: 0.3em;
-   }
-
-   .precio>* {
-      padding: var(--spacing-8) 0;
-   }
-
-   .filter__item div {
-      margin: 0 var(--spacing-20);
-
-   }
-
-   .filter__title {
-      font-size: var(--font-xsmall);
-      font-weight: 500;
-      padding: var(--spacing-12) 0;
-   }
-
-   .label__filter-price {
-      font-size: var(--font-xsmall);
-   }
-
-   .input__price {
-      width: 5px;
-   }
-
+   
 
 }
 
@@ -3497,124 +3364,22 @@ input[type=number] {
 
    /* RESPONSIVE SHOP */
 
-   .grid-container {
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-template-rows: 120px 1px 1fr 250px;
-      grid-template-areas:
-         "header header header"
-         "aside aside aside"
-         "main main main"
-         "footer footer footer";
-
-   }
-
-
-
-   .main__cards {
-      justify-content: center;
-      margin-left: 10%;
-   }
-
-   .card-1 {
-      padding: 15px;
-      grid-column: 1/2;
-      grid-row: 2;
-   }
-
-   .card-2 {
-      padding: 15px;
-      grid-column: 2/3;
-      grid-row: 2;
-   }
-
-   .card-3 {
-      padding: 15px;
-      grid-column: 1/2;
-      grid-row: 3;
-   }
-
-   .card-4 {
-      padding: 15px;
-      grid-column: 2/3;
-      grid-row: 3;
-   }
-
-   .card-5 {
-      padding: 15px;
-      grid-column: 1/2;
-      grid-row: 4;
-   }
-
-   .card-6 {
-      padding: 15px;
-      grid-column: 2/3;
-      grid-row: 4;
-   }
-
-   .card-7 {
-      padding: 15px;
-      grid-column: 1/2;
-      grid-row: 5;
-
-   }
-
-   .card-8 {
-      padding: 15px;
-      grid-column: 2/3;
-      grid-row: 5;
-   }
-
-   .card-9 {
-      padding: 15px;
-      grid-column: 1/2;
-      grid-row: 6;
-   }
-
-   .filter__item form {
-      display: none;
-
-   }
-
-   .filtro,
-   .precio {
-      display: flex;
-      flex-direction: column;
-   }
-
-
-   .filter__check {
-      display: grid;
-   }
-
-   .label__filter-check {
-      font-size: 10px;
-      margin-left: 0.3em;
-   }
-
-   .precio>* {
-      padding: var(--spacing-8) 0;
-   }
-
-   .filter__item div {
-      margin: 0 var(--spacing-20);
-
-   }
-
-   .filter__title {
-      font-size: var(--font-xsmall);
-      font-weight: 500;
-      padding: var(--spacing-12) 0;
-   }
-
-   .label__filter-price {
-      font-size: var(--font-xsmall);
-   }
-
-   .pagination {
-      margin-left: 50px;
-   }
-
+.main__cards{
+   display: flex;
+   flex-direction: column;
+    padding: 0 var(--spacing-48);
+ }
+ 
+ .filtros {
+    display: none;
+ }
+   
+ #pagination{
+    padding: 1em;
+    grid-column: 1/3;
+    grid-row: 6;
+    
+ }
 
 
 
