--- a/src/views/viewsAdmin/create.ejs
+++ b/src/views/viewsAdmin/create.ejs
@@ -54,9 +54,9 @@
             <div class="cuota__item">
                 <label class="label__input" for="dues">Cuotas:</label>
                 <select class="select__item__cuota" name="dues" id="dues">
-                    <option class="select__option" value="">3</option>
-                    <option class="select__option" value="">6</option>
-                    <option class="select__option" value="">12</option>
+                    <option class="select__option" value="3">3</option>
+                    <option class="select__option" value="6">6</option>
+                    <option class="select__option" value="12">12</option>
                 </select>
             </div>
             <div class="img__item oneline">
