--- a/src/views/viewsTienda/item.ejs
+++ b/src/views/viewsTienda/item.ejs
@@ -2,13 +2,13 @@
     <section class="item__card">
         <article class="item__card-yoda">
             <picture class="card-item__img">
-                <img class="card-item__img--front" src="../multimedia/star-wars/baby-yoda-1.webp"
+                <img class="card-item__img--front" src="<%= product.id %>"
                     alt="Figura coleccionable de Funko Baby Yoda">
                 <img class="card-item__img--back" src="../multimedia/star-wars/baby-yoda-box.webp"
                     alt="Figura coleccionable de Funko Baby Yoda Box">
             </picture>
             <div class="card-item__content">
-                <p class="item-card__licence">STAR WARS</p>
+                <p class="item-card__licence"><%= product.product_name %></p>
                 <h3 class="item-card__name">BABY YODA BLUEBALL</h3>
                 <p class="item-card__description">Figura coleccionable de Baby Yoda (Grogu) - The Mandalorian Saga,
                     edición limitada.</p>
