--- a/src/views/viewsAdmin/edit.ejs
+++ b/src/views/viewsAdmin/edit.ejs
@@ -69,9 +69,9 @@
             <div class="cuota__item cuota__item-edit">
                 <label class="label__input" for="dues">Cuotas:</label>
                 <select class="select__item__cuota" name="dues" id="dues">
-                    <option class="select__option" value="">3</option>
-                    <option class="select__option" value="">6</option>
-                    <option class="select__option" value="">12</option>
+                    <option class="select__option" value="3">3</option>
+                    <option class="select__option" value="6">6</option>
+                    <option class="select__option" value="13">12</option>
                 </select>
             </div>
 
